--- a/app/client/stylesheets/dashboard/vote/vote.css
+++ b/app/client/stylesheets/dashboard/vote/vote.css
@@ -26,14 +26,14 @@
 
 .issues__item-title {
   color: #333;
-  height: 50px;
+  min-height: 50px;
   width: 100%;
   background-color: #f5f5f5;
   border-color: #ddd;
 }
 
 .panel__title {
-  font-size: 28px;
+  font-size: 22px;
 }
 
 
