--- a/app/client/stylesheets/dashboard/main/dashboard.css
+++ b/app/client/stylesheets/dashboard/main/dashboard.css
@@ -2,8 +2,7 @@
   *   Main Dashboard Styles
   **/
 
-.dashboard,
-.vote {
+.dashboard {
   width: 100%;
   min-height: 100%;
   background-color: #F8F3F0;
