--- a/app/client/stylesheets/dashboard/vote/vote.css
+++ b/app/client/stylesheets/dashboard/vote/vote.css
@@ -2,6 +2,15 @@
   *   Current Issues Section
   **/
 
+.vote {
+  width: 100%;
+  min-height: 100%;
+  background-color: #F8F3F0;
+  top: 60px;
+  overflow: hidden;
+  margin: 60px 0 0;
+}
+
 .issues {
   margin: 60px auto 0;
 }
