--- a/app/client/templates/dashboard/main/menu.html
+++ b/app/client/templates/dashboard/main/menu.html
@@ -17,8 +17,8 @@
             <li>
               <a class="gn-icon gn-icon-cog">Settings</a>
             </li>
-            <li id="menu_logout">
-              <a class="gn-icon glyphicon glyphicon-log-out menu_glyphicon">Log Out</a>
+            <li>
+              <a href="/logout" class="gn-icon glyphicon glyphicon-log-out menu_glyphicon">Log Out</a>
             </li>
           </ul>
         </div>
