Added Delegate profiles

--- a/app/client/templates/dashboard/main/menu.html
+++ b/app/client/templates/dashboard/main/menu.html
@@ -12,7 +12,7 @@
               <a href="{{pathFor route='vote'}}" class="gn-icon gn-icon-vote">Vote</a>
             </li>
             <li>
-              <a class="gn-icon gn-icon-delegate">Delegates</a>
+              <a href="{{pathFor route='delegates'}}" class="gn-icon gn-icon-delegate">Delegates</a>
             </li>
             <li>
               <a class="gn-icon gn-icon-cog">Settings</a>
