--- a/app/client/stylesheets/dashboard/delegates/delegates.css
+++ b/app/client/stylesheets/dashboard/delegates/delegates.css
@@ -11,6 +11,27 @@
   margin: 60px 0 0;
 }
 
+/** Becoming a Delegate CSS **/
+
+.become-delegate {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 15px 0;
+}
+
+.become-delegate span {
+  font-size: 36px;
+}
+
+.personal__title {
+  font-size: 22px;
+}
+
+.personal__description {
+  margin: 25px 0;
+}
+
 /**
   *   Overview of all Delegates
   **/
@@ -35,17 +56,6 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-
-.become-delegate {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  margin: 15px 0;
-}
-
-.become-delegate span {
-  font-size: 36px;
 }
 
 .delegate__profile-picture img {
