Added Delegation JS

--- a/app/client/templates/dashboard/delegates/delegates.html
+++ b/app/client/templates/dashboard/delegates/delegates.html
@@ -72,7 +72,7 @@
           <span class="label label-default">All</span>
         </div>
         <div class="delegate__profile-button">
-          <button class="btn btn-success"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Delegate</button>
+          <button id="delegate" name="success" class="btn btn-success"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Delegate</button>
         </div>
       </div>
       <!-- End of Building Block -->
