Restructuring + Improved Delegation JS

--- a/app/client/templates/dashboard/create/create.html
+++ b/app/client/templates/dashboard/create/create.html
@@ -77,7 +77,7 @@
                           <div class="row">
                             <div class="col-xs-3 domain_options">
                               <select id="domain_select" class="domain_select" multiple="multiple">
-                                <option value="all">All</option>
+                                <option value="main">Main</option>
                                 <option value="finance">Finance</option>
                                 <option value="administrative">Administrative</option>
                                 <option value="product">Product</option>
