Latest commit with Delegate changes

--- a/app/client/templates/dashboard/delegates/delegates.html
+++ b/app/client/templates/dashboard/delegates/delegates.html
@@ -5,6 +5,9 @@
         <span class="gn-icon gn-icon-delegate" aria-hidden="true"> Delegates</span>
       </div>
     </div>
+    <div class="personal__delegates">
+      
+    </div>
     <div class="delegates__list">
 
       {{#unless currentUser.delegate}}
