--- a/app/client/stylesheets/dashboard/delegates/delegates.css
+++ b/app/client/stylesheets/dashboard/delegates/delegates.css
@@ -6,9 +6,8 @@
   width: 100%;
   min-height: 100%;
   background-color: #F8F3F0;
-  top: 60px;
   overflow: hidden;
-  margin: 60px 0 0;
+  margin: 0;
 }
 
 /** Becoming a Delegate CSS **/
